@@ -32,24 +32,18 @@ import java.util.Locale;
 public class HistoryActivity extends AppCompatActivity {
     private static final String TABLE_NAME = "history_tbl_WG";
     private static final String DB_NAME = "MyHistorydb.db";
-    private static final int DATE_DIALOG_ID = 1;
-    private static final int DATE_DIALOG_ID2 = 2;
     private static DecimalFormat df2 = new DecimalFormat(".##");
     private SQLiteDatabase database;
     private ArrayAdapter<String> listAdapter;
     private ListView mainListView;
     private ArrayList<String> goalList;
     private View v1;
-    private Double prefNameSteps;
     private String goalName;
     private String curDateHistory;
     private String dateTime;
     private String dateTM;
     private Integer numberTM;
     private int exists = 0;
-    private int positionSpinner;
-    private MenuItem mSpinnerItem1 = null;
-    private ArrayAdapter spinnerAdapter;
     private Spinner spinnerDays;
     private Spinner spinnerPercentage;
     private String[] state = {"Normal View", "Monthly View", "Week View", "Specific Period"};
@@ -62,6 +56,15 @@ public class HistoryActivity extends AppCompatActivity {
     private int value = 1;
     private int unitForMenu;
     private String unitToInsert;
+
+    public HistoryActivity(){}
+
+    public HistoryActivity(ArrayAdapter<String> listAdapter, View v1, ArrayAdapter spinnerAdapter, int year) {
+        this.listAdapter = listAdapter;
+        this.v1 = v1;
+        ArrayAdapter spinnerAdapter1 = spinnerAdapter;
+        this.year = year;
+    }
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -92,24 +95,20 @@ public class HistoryActivity extends AppCompatActivity {
                 switch (selState) {
                     case "Monthly View":
                         stateOption = 2;
-                        positionSpinner = 0;
                         value = 0;
                         choiceView();
                         break;
                     case "Week View":
                         stateOption = 3;
-                        positionSpinner = 0;
                         value = 0;
                         choiceView();
                         break;
                     case "Normal View":
                         stateOption = 1;
-                        positionSpinner = 0;
                         value = 0;
                         display1(v1);
                         break;
                     case "Specific Period":
-                        positionSpinner = 3;
                         stateOption = 4;
 
                         SharedPreferences preferences = HistoryActivity.this.getSharedPreferences("nbRepet", MODE_PRIVATE);
@@ -203,13 +202,13 @@ public class HistoryActivity extends AppCompatActivity {
 
         });
 
-        //return the data from the pedometer activity (last goal is active there)
+        //return the data from the pedometer activity (last goal that is active there)
         SharedPreferences myPrefs = this.getSharedPreferences("myPrefs", MODE_PRIVATE);
-        String prefName = myPrefs.getString("MyData", "0");
-        prefNameSteps = Double.valueOf(myPrefs.getString("MyData2", String.valueOf(0.0)));//current steps
+        //String prefName = myPrefs.getString("MyData", "0");
+        Double prefNameSteps = Double.valueOf(myPrefs.getString("MyData2", String.valueOf(0.0)));
         goalName = myPrefs.getString("MyData3", "0");//name of the current goal
 
-        //hereeeeeeeeeeeeeeeeeeeeeeeeee i open the shared preferences of the test mode
+        //here i open the shared preferences of the test mode
         SharedPreferences testModePreferences = this.getSharedPreferences("textModeSetting", MODE_PRIVATE);
         dateTM = testModePreferences.getString("date", null);
         numberTM = testModePreferences.getInt("testM", 0);
@@ -321,7 +320,7 @@ public class HistoryActivity extends AppCompatActivity {
                     if (numberTM == 1 && modeTest == 2) {
                         System.out.println("here in test mode");
                         if (unitReturn().equals("Steps")) {
-                            goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + Double.valueOf(stepsDid).longValue());
+                            goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + stepsDid.longValue());
                         } else {
                             goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + df2.format(stepsDid));
 
@@ -331,7 +330,7 @@ public class HistoryActivity extends AppCompatActivity {
                     if (differenceInDays() >= 1 && (dateTime.compareTo(curDateHistory) < 0) && numberTM == 0) {
                         System.out.println("difference in days in if: " + differenceInDays());
                         if (unitReturn().equals("Steps")) {
-                            goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + Double.valueOf(stepsDid).longValue());
+                            goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + stepsDid.longValue());
 
                         } else {
                             goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + df2.format(stepsDid));
@@ -359,8 +358,7 @@ public class HistoryActivity extends AppCompatActivity {
     public String getCurrentDate() {
         Date curDate = new Date();
         SimpleDateFormat format = new SimpleDateFormat("dd/MM/yyyy", Locale.UK);
-        String DateToStr = format.format(curDate);
-        return DateToStr;
+        return format.format(curDate);
     }
 
     public long differenceInDays() {
@@ -398,20 +396,13 @@ public class HistoryActivity extends AppCompatActivity {
         database = dbOpenHelper.openDataBase();
 
         String count = "SELECT COUNT(*) FROM history_tbl_WG";
-
         Cursor mcursor = database.rawQuery(count, null);
         mcursor.getCount();
-
-
         if (mcursor != null) {
             mcursor.moveToFirst();
 
             String countName = mcursor.getString(0);
-            if (!countName.equals("0")) {
-                flag = true;
-            } else {
-                flag = false;
-            }
+            flag = !countName.equals("0");
 
         } else {
             flag = false;
@@ -425,13 +416,12 @@ public class HistoryActivity extends AppCompatActivity {
 
     public void print() {
         String name;
-        Integer steps = 0;
+        Integer steps;
         Double stepsDid;
-        String unit = "";
+        String unit;
         Float percentage;
-        String dateSearch = "";
-        Integer activeNumber = 0;
-        //here i store the active goal that i want to transfer
+        String dateSearch;
+        Integer activeNumber;
         //The database is open!
         ExternalDbOpenHelper dbOpenHelper = new ExternalDbOpenHelper(this, "MyHistorydb.db");
         database = dbOpenHelper.openDataBase();
@@ -439,7 +429,6 @@ public class HistoryActivity extends AppCompatActivity {
         Cursor cursor = database.rawQuery("select * from history_tbl_WG where active='" + 1 + "'", null);
         cursor.moveToFirst();
         if (!cursor.isAfterLast()) {
-            System.out.println("edw1111111");
             do {
                 System.out.println("Collect the data from the active goal");
                 name = cursor.getString(cursor.getColumnIndex("name"));
@@ -589,7 +578,7 @@ public class HistoryActivity extends AppCompatActivity {
                         if (differenceInDays() >= 1 && (dateTime.compareTo(curDateHistory) < 0) && numberTM == 0 && (currentMonth - month == 1)) {
                             System.out.println("difference in days in if: " + differenceInDays());
                             if (unitReturn().equals("Steps")) {
-                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + Double.valueOf(stepsDid).longValue());
+                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + stepsDid.longValue());
 
                             } else {
                                 goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + df2.format(stepsDid));
@@ -605,7 +594,7 @@ public class HistoryActivity extends AppCompatActivity {
                         if (numberTM == 1 && modeTest == 2 && (daysDifference >= 1 && daysDifference <= 7)) {
                             System.out.println("here in test mode");
                             if (unitReturn().equals("Steps")) {
-                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + new Double(stepsDid).longValue());
+                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + Double.valueOf(stepsDid).longValue());
                             } else {
                                 goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + df2.format(stepsDid));
 
@@ -615,7 +604,7 @@ public class HistoryActivity extends AppCompatActivity {
                         if (differenceInDays() >= 1 && (dateTime.compareTo(curDateHistory) < 0) && numberTM == 0 && (daysDifference >= 1 && daysDifference <= 7)) {
                             System.out.println("difference in days in if: " + differenceInDays());
                             if (unitReturn().equals("Steps")) {
-                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + new Double(stepsDid).longValue());
+                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + Double.valueOf(stepsDid).longValue());
 
                             } else {
                                 goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + df2.format(stepsDid));
@@ -631,7 +620,7 @@ public class HistoryActivity extends AppCompatActivity {
                         if (numberTM == 1 && modeTest == 2 && percentage >= 1.00) {
                             System.out.println("here in test mode");
                             if (unitReturn().equals("Steps")) {
-                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + new Double(stepsDid).longValue());
+                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + Double.valueOf(stepsDid).longValue());
                             } else {
                                 goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + df2.format(stepsDid));
 
@@ -641,7 +630,7 @@ public class HistoryActivity extends AppCompatActivity {
                         if (differenceInDays() >= 1 && (dateTime.compareTo(curDateHistory) < 0) && numberTM == 0 && percentage >= 1.00) {
                             System.out.println("difference in days in if: " + differenceInDays());
                             if (unitReturn().equals("Steps")) {
-                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + Double.valueOf(stepsDid).longValue());
+                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + stepsDid.longValue());
 
                             } else {
                                 goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + df2.format(stepsDid));
@@ -683,7 +672,7 @@ public class HistoryActivity extends AppCompatActivity {
                         if (numberTM == 1 && modeTest == 2 && (percentage * 100 <= perCentage)) {
                             System.out.println("here in test mode");
                             if (unitReturn().equals("Steps")) {
-                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + Double.valueOf(stepsDid).longValue());
+                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + stepsDid.longValue());
                             } else {
                                 goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + df2.format(stepsDid));
 
@@ -693,7 +682,7 @@ public class HistoryActivity extends AppCompatActivity {
                         if (differenceInDays() >= 1 && (dateTime.compareTo(curDateHistory) < 0) && numberTM == 0 && (percentage * 100 <= perCentage)) {
                             System.out.println("difference in days in if: " + differenceInDays());
                             if (unitReturn().equals("Steps")) {
-                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + new Double(stepsDid).longValue());
+                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + Double.valueOf(stepsDid).longValue());
 
                             } else {
                                 goalList.add(dateTime + "\n" + "Name: " + name + " || " + unitReturn() + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unitReturn() + " Walked: " + df2.format(stepsDid));
@@ -710,7 +699,7 @@ public class HistoryActivity extends AppCompatActivity {
                         if (numberTM == 1 && modeTest == 2 && checkRange) {
                             System.out.println("here in test mode");
                             if (unitReturn().equals("Steps")) {
-                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + Double.valueOf(stepsDid).longValue());
+                                goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + stepsDid.longValue());
                             } else {
                                 System.out.println("here in test mode againnnnn");
                                 goalList.add(dateTime + "\n" + "Name: " + name + " || " + unit + ": " + steps + " || Percentage: " + (int) ((percentage * 100) + 0.5) + "%" + " ||" + "\n" + unit + " Walked: " + df2.format(stepsDid));
@@ -807,7 +796,7 @@ public class HistoryActivity extends AppCompatActivity {
         } catch (ParseException e) {
             e.printStackTrace();
         }
-        return (tDate != null ? tDate.after(convertedDate1) : false) && tDate.before(convertedDate2);
+        return (tDate != null && tDate.after(convertedDate1)) && tDate.before(convertedDate2);
     }
 
     @Override
@@ -1223,19 +1212,4 @@ public class HistoryActivity extends AppCompatActivity {
 
     }
 
-    public ArrayAdapter<String> getListAdapter() {
-        return listAdapter;
-    }
-
-    public void setListAdapter(ArrayAdapter<String> listAdapter) {
-        this.listAdapter = listAdapter;
-    }
-
-    public int getYear() {
-        return year;
-    }
-
-    public void setYear(int year) {
-        this.year = year;
-    }
 }
